--- a/project.html
+++ b/project.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-white" href="https://mobirise.com">GELUID IN RUIMTE</a>
+                        <a class="navbar-caption text-primary" href="index.html">GELUID IN RUIMTE | SCHIJNBARE WERKELIJKHEID</a>
                     </div>
 
                 </div>
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a><a class="dropdown-item" href="analyse.html">ANALYSE</a><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">MATERIALENSTUDIE</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="eindontwerp.html" data-toggle="dropdown-submenu" aria-expanded="false">EINDONTWERP</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="beeldmateriaal.html">BEELDMATERIAAL</a><a class="dropdown-item" href="conclussie.html">CONCLUSIE</a></div></div></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="inleiding.html"><p>INLEIDING&nbsp;&nbsp;</p></a><a class="dropdown-item" href="brainstorm.html"><p>BRAINSTORM&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="analyse.html"><p>ANALYSE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="ontwerpproces.html"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="vormenstudie.html"><p>VORMENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="materialenstudie.html"><p>MATERIALENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="eindontwerp.html" aria-expanded="true">EINDONTWERP</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web creator software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-d" style="background-color: rgb(255, 255, 255); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">offline site generator software download</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-d" style="background-color: rgb(255, 255, 255); padding-top: 200px; padding-bottom: 120px;">
 
     
     <div class="container">
