--- a/vertrekgeluiden.html
+++ b/vertrekgeluiden.html
@@ -37,7 +37,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-white" href="https://mobirise.com">GELUID IN RUIMTE</a>
+                        <a class="navbar-caption text-primary" href="index.html">GELUID IN RUIMTE | SCHIJNBARE WERKELIJKHEID</a>
                     </div>
 
                 </div>
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a><a class="dropdown-item" href="analyse.html">ANALYSE</a><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">MATERIALENSTUDIE</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="eindontwerp.html" data-toggle="dropdown-submenu" aria-expanded="false">EINDONTWERP</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="beeldmateriaal.html">BEELDMATERIAAL</a><a class="dropdown-item" href="conclussie.html">CONCLUSIE</a></div></div></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="inleiding.html"><p>INLEIDING&nbsp;&nbsp;</p></a><a class="dropdown-item" href="brainstorm.html"><p>BRAINSTORM&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="analyse.html"><p>ANALYSE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="ontwerpproces.html"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="vormenstudie.html"><p>VORMENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="materialenstudie.html"><p>MATERIALENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="eindontwerp.html" aria-expanded="true">EINDONTWERP</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top web page builder software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery4-12" data-filter="true" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy responsive web page generator software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery4-12" data-filter="true" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active">
         <ul>
@@ -69,7 +69,7 @@
     </div>
 
     <!-- Gallery -->
-    <div class="mbr-gallery-row">
+    <div class="mbr-gallery-row container">
         <div class=" mbr-gallery-layout-default">
             <div>
                 <div>
@@ -226,7 +226,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="3y0keYx6PZZpctrRxJg5R8k+EAM089pQaf9H1u06UOvJ+b8KFWfbl41qDfCI4RHbSUYPX+rKwTnEW+95pshumpZ/3DEtWGhvwkR9N3YCpeLzWf8Z8PMvd9EgtbhQnVzl" data-form-email="true">
+                    <input type="hidden" value="Puhpgqs0kjmYEMg+HE8okyo3xuHAXG3rx7bOvzpO22i69pp/5NG28fEbjWBEZGQKbUh+MN7zJl0Mm05d5b8rf1mTaWET31MdzK/u6AfiOSnCF37+eFEzBUejMO/mrTom" data-form-email="true">
 
                     
 
