--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+UA-88674412-1<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-88674412-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="ext_menu-4">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -47,7 +62,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="inleiding.html"><p>INLEIDING&nbsp;&nbsp;</p></a><a class="dropdown-item" href="brainstorm.html"><p>BRAINSTORM&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="analyse.html"><p>ANALYSE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="ontwerpproces.html"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="vormenstudie.html"><p>VORMENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="materialenstudie.html"><p>MATERIALENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="eindontwerp.html" aria-expanded="true">EINDONTWERP</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="inleiding.html"><p>INLEIDING&nbsp;&nbsp;</p></a><a class="dropdown-item" href="brainstorm.html"><p>BRAINSTORM&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="analyse.html"><p>ANALYSE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="ontwerpproces.html"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="vormenstudie.html"><p>VORMENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="materialenstudie.html"><p>MATERIALENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free website building software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-i" data-bg-video="https://www.youtube.com/embed/w-Ts7vTz5SE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">best web page creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-i" data-bg-video="https://www.youtube.com/embed/w-Ts7vTz5SE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);"></div>
 
@@ -243,7 +258,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="ffHFH4Hn4/ZrxDnYcmmHKyjX4EScJm4utZArNOHDhe+z8uP6XPCClncfVqha7afapuVUyqgtL7PDOK8ZaAxtpV/Wz3wGZNx+ktSDKRIOWCrbxCWTeZTinet3YjCW+rpc" data-form-email="true">
+                    <input type="hidden" value="eiocFL9noboqG+3o361Fez84Isi7sR0V/+yyOGP37N4Jn0PNleqm6zSHK68fadAqFAPsXLaQuaK6B01NDhs9ls2B0KUGtnvxtdsyrMy9CC80FnOIxMPRlkj5cKiToJEb" data-form-email="true">
 
                     
 
@@ -273,6 +288,8 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/viewportChecker/jquery.viewportchecker.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/jquery-mb-ytplayer/jquery.mb.YTPlayer.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
@@ -287,5 +304,6 @@
   
   <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
+  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
