--- a/analyse.html
+++ b/analyse.html
@@ -26,6 +26,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+UA-88674412-1<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-88674412-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="ext_menu-l">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -46,7 +61,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="inleiding.html"><p>INLEIDING&nbsp;&nbsp;</p></a><a class="dropdown-item" href="brainstorm.html"><p>BRAINSTORM&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="analyse.html"><p>ANALYSE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="ontwerpproces.html"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="vormenstudie.html"><p>VORMENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="materialenstudie.html"><p>MATERIALENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="eindontwerp.html" aria-expanded="true">EINDONTWERP</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="inleiding.html"><p>INLEIDING&nbsp;&nbsp;</p></a><a class="dropdown-item" href="brainstorm.html"><p>BRAINSTORM&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="analyse.html"><p>ANALYSE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="ontwerpproces.html"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="vormenstudie.html"><p>VORMENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="materialenstudie.html"><p>MATERIALENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +74,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top responsive web development software download</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-1b" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top drag and drop web design</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-1b" style="background-color: rgb(255, 255, 255);">
     <div class=" container boxed-slider" style="padding-top: 120px; padding-bottom: 120px;">
         <div>
             <div>
@@ -172,7 +187,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="AflLGF3J3uFWgIdPwH7A+0b2Pda2zFOhnnijwKeuIXzt2WCDG4C3f/C310Z11vkzhR1bL1EjSCLVjfLpYHajHs+NEA4K4C749K7az6pP2O+KDUMzlClVK8HX+sg+5x8v" data-form-email="true">
+                    <input type="hidden" value="X2boRXHkpMAC0nefWlDg+8dWI+6rvNn3W/kzVhEB2ifx6yWlDr3QK3AEFLV0qxbPWEr6tmnQQRVU9GBrhsvQdWwvr/CP48Mqr8T/UXJDrcGVjGYQXWaihPvpg6NuIJvP" data-form-email="true">
 
                     
 
@@ -202,6 +217,8 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/viewportChecker/jquery.viewportchecker.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
@@ -211,5 +228,6 @@
   
   <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
+  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
