--- a/vormenstudie.html
+++ b/vormenstudie.html
@@ -27,6 +27,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+UA-88674412-1<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-88674412-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="ext_menu-r">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -47,7 +62,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="inleiding.html"><p>INLEIDING&nbsp;&nbsp;</p></a><a class="dropdown-item" href="brainstorm.html"><p>BRAINSTORM&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="analyse.html"><p>ANALYSE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="ontwerpproces.html"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="vormenstudie.html"><p>VORMENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="materialenstudie.html"><p>MATERIALENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="eindontwerp.html" aria-expanded="true">EINDONTWERP</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><a class="dropdown-item" href="inleiding.html"><p>INLEIDING&nbsp;&nbsp;</p></a><a class="dropdown-item" href="brainstorm.html"><p>BRAINSTORM&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="analyse.html"><p>ANALYSE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="ontwerpproces.html"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="vormenstudie.html"><p>VORMENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="materialenstudie.html"><p>MATERIALENSTUDIE&nbsp;&nbsp;&nbsp;&nbsp;</p></a><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">offline web building software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-1d" data-filter="false" style="background-color: rgb(239, 239, 239); padding-top: 6rem; padding-bottom: 6rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop web page design software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-1d" data-filter="false" style="background-color: rgb(239, 239, 239); padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
@@ -246,7 +261,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="mDfDrGkR/xWD8Hk3e3/gdoRHYbJZ9UP0209qtR9QWx0ek1hVRO3Rj62ot5liwPlo6wLp0GhBMBLvConPFYO2TvcQOjho7e1mdUgGk7SxeHwt8JG+1oz0a1SkkdjqSZ4z" data-form-email="true">
+                    <input type="hidden" value="cvoFLf4+XDxveO0hJXMDunun/HiGRzyZw640Tbd29/xdaKlVc+tMYvBIBOtJ9HrQM+p8hquOHcFxcDtUkuZt5CHbSw2vEjgsoMqIAzrQJq7Bt5Ecd1jvDiFHSuO6aY5m" data-form-email="true">
 
                     
 
@@ -276,6 +291,8 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/viewportChecker/jquery.viewportchecker.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
@@ -289,5 +306,6 @@
   
   <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
+  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
