--- a/materialenstudie.html
+++ b/materialenstudie.html
@@ -73,7 +73,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy html site development software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2h" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple web page development software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2h" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -190,7 +190,7 @@ UA-88674412-1<script>
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="5e43SsEAqIMW9Xb8AQuXL8gr0vR5Ic2ZsZ/HF3jo7mSayxuh3wTEl5lRn9/N9vH4g9lH8U6YtLcQYLT9hB0PwLnC73IcbN7ORed2wlXICr02w1PL/X9EH/l7jI2zKjVP" data-form-email="true">
+                    <input type="hidden" value="Am/2qq4lZFmah/2Rbr+eFEe2H5CgDU9mre+w3IpM3e5eaW1hLIpR8WWxYlqsa01TB1PB5yUH8KSU0zP7k6dbQAgbSHJEEZ8o2MphTee9EsCuox2EQcntjM7+INKWVG3R" data-form-email="true">
 
                     
 
