--- a/wiezijnwe.html
+++ b/wiezijnwe.html
@@ -31,7 +31,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-88674412-1, 'auto');
+  ga('create', 'UA-89267075-1', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -58,7 +58,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a><a class="dropdown-item" href="analyse.html">ANALYSE</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">MATERIALENSTUDIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a><a class="dropdown-item" href="analyse.html">ANALYSE</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">MATERIALENSTUDIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free drag and drop web site development</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2k" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top html web design software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2k" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -161,7 +161,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Gkwer6oV7j7su3kBmM+mt8WxWRr7X9Cs1/ENYhp49k++ZUjeCs/ZfXgBuQFVg9aeYTMIAw3OhU1yA5AgYkpyhSD0Ug/hrChUy0qp96uz/JsN/wWPG5jp9387eAskJlSv" data-form-email="true">
+                    <input type="hidden" value="5uUErb430tOQoBJTE/Xj9+oYduzcmRX+ArczFd+nbBuJxodRtv4cn4BQUBt/aVG/CkpmIsR7vbpUd/EvEfkPUr0HPHzhXJs0Q4EN6inbl0waks0f0I9PFOemklowSM7q" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
