--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-88674412-1, 'auto');
+  ga('create', 'UA-89267075-1', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -60,7 +60,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a><a class="dropdown-item" href="analyse.html">ANALYSE</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">MATERIALENSTUDIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a><a class="dropdown-item" href="analyse.html">ANALYSE</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">MATERIALENSTUDIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top offline web page builder software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-i" data-bg-video="https://www.youtube.com/embed/_AK4tCz2PF4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">best bootstrap web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-i" data-bg-video="https://www.youtube.com/embed/_AK4tCz2PF4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);"></div>
 
@@ -229,7 +229,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="5MIiBt4m5iZW2Kr3Ko0wEHUMuML+tsr+WE/kWw2Z4bYBP10qmp/6+6I+3ofhPKwtOvqZ6ETxTdnFoyicBT73pn8AvkdThPFcCQqUMY5757mdkLFUe/G2h2S5+24ToQVz" data-form-email="true">
+                    <input type="hidden" value="056jbMc2tLCp5y5JsvKxldO2o7HSlhwQR7NPZWWLYi9XYCi922nuJawX2RWdXJdaemQiumzZwAzyGl+WAfzWecjRD5bko57T3xsa6NqOtxDMUiYrsmYm0dJ++P9nPWDK" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
