--- a/inleiding.html
+++ b/inleiding.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy offline site generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1g" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop website generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1g" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -298,7 +298,7 @@ het bord dat in vele opticiens hangt om ogen te testen. Er werden ook nieuwe zak
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="mfRL8ErY1rv131jN+j8bq0z7NgiWPLQyVS4L6TS4ChbEEFf+KNq7Zj8Rgs6dUvLQU/ERbxgRA0CYyieSY2rU/ar3ifteoYx1bKhMwqw5xsB8aPxy6ocwr7qHN0rOfv8V" data-form-email="true">
+                    <input type="hidden" value="HgCJvDKz5nt3rH7PATnlIAqB3ez3d6uFg973bZYUVl7o6O/FXH5O7LwpbusFhLB5HAKUcBoFnanvh9/tG2JCDwplwdLJtLxDkznOLTEvaJZ0GaymVWE0DcxHwUNfHA9Z" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
