--- a/brainstorm.html
+++ b/brainstorm.html
@@ -60,7 +60,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="true"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="visie.html">VISIE</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">TECHNISCHE ASPECT EN MATERIALISATIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="visie.html">VISIE</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">TECHNISCH ASPECT EN MATERIALISATIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best responsive website creator software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2l" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy offline site builder software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2l" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -473,7 +473,7 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br><br><span style="font-size: 0.875rem; line-height: 1.5;">Universiteit Antwerpen</span><br>Faculteit Ontwerpwetenschappen<br>Campus Mutsaardstraat<br><br><br><br></p>
+                        <p><strong>Address</strong><br><br>UAntwerpen<br>Faculteit Ontwerpwetenschappen<br>Campus Mutsaardstraat<br><br><br><br></p>
                     </div>
                     <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p></p><li><a href="wiezijnwe.html">W</a><a href="wiezijnwe.html">ie zijn we</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip">V</a><a href="vertrekgeluiden.html">ertrekgeluiden</a></li><li><a href="inleiding.html">Inleiding</a></li><li><a href="ontwerpproces.html">Ontwerpproces</a></li><p></p><p><font color="#bcbcbc"><span style="font-size: 14px; line-height: 25px;"><br></span></font><br><br></p></ul></div>
                 </div>
@@ -483,7 +483,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="GLLomF4fKfIRHWA4g9DsqD+PlD1RChuHkUuy7FMofwNtljjWIO7lQUDzqF/+Kgt/YQQ+1qxsOBdLpDG9I70c5Rwv8iD0kj7xe5bVnXLY46+/J+/3Jd9bHvDgIVLY5zR+" data-form-email="true">
+                    <input type="hidden" value="ECCQMF5RBbhJIWt2lX1Jxtu90KdFiGSV8ysAEmjomwMtsKryb10MLSGwXw35dEIrvggmg/e2mdTTVsKzkodTaPZSMYFyDcwefS3j3H19zeDBceTMPQkNVFLfsf9qzbPn" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
