--- a/eindontwerp.html
+++ b/eindontwerp.html
@@ -58,7 +58,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="true"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="visie.html">VISIE</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">TECHNISCHE ASPECT EN MATERIALISATIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="visie.html">VISIE</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">TECHNISCH ASPECT EN MATERIALISATIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">html website generator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1k" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap site design</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1k" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -115,8 +115,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Uiteindelijk hebben we geopteerd om één van de vier woonomgevingen op schaal 1:1 te maken. We hebben gekozen voor de woonomgeving van Clair, namelijk bosgebied. Op de geluidsgrafiek had je hier de interessantste vormen. In deze grafiek zaten namelijk meer pieken dan in de andere. En ook had je meer stiltes. Op de andere grafieken had je meer achtergrond geluiden.&nbsp;</p><p><br></p><p>De grafiek op schaal 1:1 kan je hieronder terugvinden. Deze is gemaakt uit restafval van een houtfirma en restjes die we bij iemand thuis mochten halen. Deze bestaat uit verschillende houtsoorten: padoek
-o, franse walnoot
+            <div class="col-xs-12 lead"><p>Uiteindelijk hebben we geopteerd om één van de vier woonomgevingen op schaal 1:1 te maken. We hebben gekozen voor de woonomgeving van Claire, namelijk bosgebied. Op de geluidsgrafiek had je hier de interessantste vormen. In deze grafiek zaten namelijk meer pieken dan in de andere. En ook had je meer stiltes. Op de andere grafieken had je meer achtergrondgeluiden.&nbsp;</p><p><br></p><p>De grafiek op schaal 1:1 kan je hieronder terugvinden. Deze is gemaakt uit restafval van een houtfirma en restjes die we bij iemand thuis mochten halen. Deze bestaat uit verschillende houtsoorten: padoek, franse walnoot
 , &nbsp;multiplex
 , g<span style="font-size: 1.07rem; line-height: 1.5;">renen, afrormosia, weigné...</span></p><p><br></p><p>Wij danken de firma Heerenhuis Manufactuur voor het hout die we gratis voor gebruik kregen. Deze firma is gespecialiseerd in het maken van tafels bestaande uit massieve houtelementen.&nbsp;</p></div>
         </div>
@@ -320,7 +319,7 @@ o, franse walnoot
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br><br><span style="font-size: 0.875rem; line-height: 1.5;">Universiteit Antwerpen</span><br>Faculteit Ontwerpwetenschappen<br>Campus Mutsaardstraat<br><br><br><br></p>
+                        <p><strong>Address</strong><br><br>UAntwerpen<br>Faculteit Ontwerpwetenschappen<br>Campus Mutsaardstraat<br><br><br><br></p>
                     </div>
                     <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p></p><li><a href="wiezijnwe.html">W</a><a href="wiezijnwe.html">ie zijn we</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip">V</a><a href="vertrekgeluiden.html">ertrekgeluiden</a></li><li><a href="inleiding.html">Inleiding</a></li><li><a href="ontwerpproces.html">Ontwerpproces</a></li><p></p><p><font color="#bcbcbc"><span style="font-size: 14px; line-height: 25px;"><br></span></font><br><br></p></ul></div>
                 </div>
@@ -330,7 +329,7 @@ o, franse walnoot
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="MX8pfBebKqOfG5uaK4g0lYfteejpa7CCapZmO8W3IR+xAD1qlqUYB4vsdqeX2pz630asvQ8RalvUI4Zaai9lOVl6N9K5fesZUFbyFt4Y8TXC0aHH3+tEeojv8JMP3XL0" data-form-email="true">
+                    <input type="hidden" value="sA5JYqUZAiaHLX4LvBXqkOEqt1/1TNnf8i5dZwfHQdmGLd0NumkJ1FpeTk1igbRGS66vNlZZ0BFz3dwpWHBQJOrXCkU/H2a0lYCS/h9cJhr/w0rveYenQqkoceXuOqth" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
