--- a/materialenstudie.html
+++ b/materialenstudie.html
@@ -58,7 +58,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="true"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="visie.html">VISIE</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">TECHNISCHE ASPECT EN MATERIALISATIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="visie.html">VISIE</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">TECHNISCH ASPECT EN MATERIALISATIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top wysiwyg site creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2h" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop website generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2h" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -104,13 +104,13 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead"><p>Na enkele brainstormsessies zijn we op het concept ‘wave forms’ gekomen. Deze wave forms zijn waar te nemen via een apparaat dat geluid kan opnemen en dit geluid weet te vertalen in beeld. Dit beeld geeft de frequentie weer van een geluid over een een zekere periode. Het menselijk oor weet maar een bepaald deel van dit spectrum waar te nemen in tegenstelling tot onze opnameapparatuur. De weergave van het geluid dat voor ons hoorbaar is, is dus veel complexer dan wat men in werkelijkheid waarneemt. Omwille van dit waarnemingsaspect kunnen geluiden die je hoort tijdens het opnemen van het fragment dus ook heel erg verschillen van de geluiden die je hoort in de opname. Men neemt niet echt waar wat men in werkelijkheid hoort omdat het menselijk brein de onbelangrijke achtergrondgeluiden weg filtert. Dit is zeer goed waar te nemen in de opname van de stad, die in een vrij rustige buurt van Antwerpen is gemaakt. Toch hoor je een onophoudelijk geruis in de opname die, als je het constant zou horen, ondraaglijk zou kunnen worden. Een gelijkaardig voorbeeld dat dit waarnemingsaspect illustreert is dat het brein je eigen neus doorgaans weg filtert uit je gezichtsveld <br><em>- Niets is wat het lijkt -&nbsp;</em></p><p><br></p><h4>Een grafische gelaagdheid. &nbsp;</h4><p>De grafiek die weergegeven wordt, oogt erg typerend: de meeste mensen weten waarover het gaat bij het zien van deze grafiek, namelijk geluidsgolven.
-We hebben er voor gekozen om met dit gegeven te gaan werken. </p><p>De nadruk zou dan vooral liggen op de vertaling van een geluid in een 3 dimensionaal werk aan de hand van de grafische vertaling van de gekozen geluidsopnamen.
-</p><p><br></p><p>Net omdat de menselijke interpretatie van geluid heel anders kan zijn dan de objectieve opname, hebben we ervoor gekozen om een zo accuraat mogelijke weergaven te verwezenlijken van de geluidsopnamen.
+We hebben er voor gekozen om met dit gegeven te gaan werken. </p><p>De nadruk zou dan vooral liggen op de vertaling van een geluid in een driedimensionaal werk aan de hand van de grafische vertaling van de gekozen geluidsopnames.
+</p><p><br></p><p>Net omdat de menselijke interpretatie van geluid heel anders kan zijn dan de objectieve opname, hebben we ervoor gekozen om een zo accuraat mogelijke weergaves te verwezenlijken van de geluidsopnames.
 Desondanks dat we de grafiek moesten stileren, zijn we er toch in geslaagd een zo nauwkeurig mogelijk beeld weer te geven van hoe de wave form is opgebouwd. 
 </p><p><br></p><p>Om dit tastbaar te maken zijn we de grafieken gaan ontleden. We hebben onderzoek gedaan naar een schaal die economisch en tijdsgericht haalbaar is. 
 Bovendien heeft de ruimte waarin het prototype geplaatst zou worden ertoe bij gedragen dat we een bepaalde schaal hebben gehanteerd. 
-</p><p><br></p><p>Voor de materialisatie leek hout ons vrij geschikt omdat dit gemakkelijk is te bewerken met basis gereedschap. Op die manier zijn we terecht gekomen bij enkele Antwerpse meubelmakers die met natuurhout werken. We hebben gevraagd of we de afvalbak mochten doorkammen, en hebben zo een hoeveelheid hout bij elkaar gekregen. 
-</p><p>Dit zijn we dan gaan verzagen in vierkanten van verschillende groten.
+</p><p><br></p><p>Voor de materialisatie leek hout ons vrij geschikt omdat dit gemakkelijk is te bewerken met basisgereedschap. Op die manier zijn we terecht gekomen bij enkele Antwerpse meubelmakers die met natuurhout werken. We hebben gevraagd of we de afvalbak mochten doorkammen, en hebben zo een hoeveelheid hout bij elkaar gekregen. 
+</p><p>Dit zijn we dan gaan verzagen in vierkanten van verschillende groottes.
 </p><p><br></p>Vervolgens hebben we de stukken zo aan elkaar gemonteerd dat ze een zo accuraat mogelijke ruimtelijke vertaling vormen van de opgenomen sound waves.&nbsp;<p><br></p></div>
         </div>
     </div>
@@ -124,7 +124,7 @@ Bovendien heeft de ruimte waarin het prototype geplaatst zou worden ertoe bij ge
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br><br><span style="font-size: 0.875rem; line-height: 1.5;">Universiteit Antwerpen</span><br>Faculteit Ontwerpwetenschappen<br>Campus Mutsaardstraat<br><br><br><br></p>
+                        <p><strong>Address</strong><br><br>UAntwerpen<br>Faculteit Ontwerpwetenschappen<br>Campus Mutsaardstraat<br><br><br><br></p>
                     </div>
                     <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p></p><li><a href="wiezijnwe.html">W</a><a href="wiezijnwe.html">ie zijn we</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip">V</a><a href="vertrekgeluiden.html">ertrekgeluiden</a></li><li><a href="inleiding.html">Inleiding</a></li><li><a href="ontwerpproces.html">Ontwerpproces</a></li><p></p><p><font color="#bcbcbc"><span style="font-size: 14px; line-height: 25px;"><br></span></font><br><br></p></ul></div>
                 </div>
@@ -134,7 +134,7 @@ Bovendien heeft de ruimte waarin het prototype geplaatst zou worden ertoe bij ge
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="20gCvhdv2XiSC8JzlRyyaKoJxcRe4KsdErDq1qoaS3e3c1LlsUqcNvbyIlHOD9ixlcJnu2WLk6ENBXTbv2qlGe2dfv56BTIGMQ7TFcxJ7zVdud24y6CE+6jSBMEKhXSx" data-form-email="true">
+                    <input type="hidden" value="RwGQj+zLGcEriSkW2cguUa5wQOqL1bB2GvHnhYob/7KJHEczejqfK9wG8qnlJiUHPtPwX88WnrXgOgV0ceOTQcynvspwJERP33l0fKzg0qLvqJuw5yZ7c3eN6jYdrS1c" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
