--- a/project.html
+++ b/project.html
@@ -58,7 +58,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="true"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="visie.html">VISIE</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">TECHNISCHE ASPECT EN MATERIALISATIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="visie.html">VISIE</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">TECHNISCH ASPECT EN MATERIALISATIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg web development software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-d" style="background-color: rgb(255, 255, 255); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy html website maker software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-d" style="background-color: rgb(255, 255, 255); padding-top: 200px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -112,7 +112,7 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br><br><span style="font-size: 0.875rem; line-height: 1.5;">Universiteit Antwerpen</span><br>Faculteit Ontwerpwetenschappen<br>Campus Mutsaardstraat<br><br><br><br></p>
+                        <p><strong>Address</strong><br><br>UAntwerpen<br>Faculteit Ontwerpwetenschappen<br>Campus Mutsaardstraat<br><br><br><br></p>
                     </div>
                     <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p></p><li><a href="wiezijnwe.html">W</a><a href="wiezijnwe.html">ie zijn we</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip">V</a><a href="vertrekgeluiden.html">ertrekgeluiden</a></li><li><a href="inleiding.html">Inleiding</a></li><li><a href="ontwerpproces.html">Ontwerpproces</a></li><p></p><p><font color="#bcbcbc"><span style="font-size: 14px; line-height: 25px;"><br></span></font><br><br></p></ul></div>
                 </div>
@@ -122,7 +122,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="6E8K5pMiYcHslI+MuiWlBJ9gU7x2EP0+ToFqFBgYZyYY4fWa3rBRejbVS1XyPrSZuuqbE76MRJw6zPHezyqgi9AmDRWCef7S33PWbt3BbZZu4Lflmfp1uMxSV1px8WSr" data-form-email="true">
+                    <input type="hidden" value="G1mxtqzw9zZCwbq2Qo47vtXtKFvIdTsUuzlC1jJw2YVpB8R9+rGlPXotOBkFUVy7F+P+c0tgL0+2O5Fx6Eics+WvPuPFgYQuRRAScE6CucS0DqRnk22Bd/WUSvNdKkkK" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
