--- a/brainstorm.html
+++ b/brainstorm.html
@@ -50,7 +50,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="index.html">GELUID IN RUIMTE&nbsp;</a>
+                        <a class="navbar-caption text-black" href="index.html">FOREST SOUNDFORM</a>
                     </div>
 
                 </div>
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy offline site builder software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2l" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best website creator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2l" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -483,7 +483,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ECCQMF5RBbhJIWt2lX1Jxtu90KdFiGSV8ysAEmjomwMtsKryb10MLSGwXw35dEIrvggmg/e2mdTTVsKzkodTaPZSMYFyDcwefS3j3H19zeDBceTMPQkNVFLfsf9qzbPn" data-form-email="true">
+                    <input type="hidden" value="6FNGm7bkhJ6SgaL107s0Ohj8CaQOT17e/iheFd0QbhghMVRpA1vRVg4IR6e0jh1SGAQPC7MGhHyHOI/s5a2SoLarqmjjmnBQvNyyRAwB2s3/1ErAJGY1yTJ6q+Qf85lG" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
