--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="index.html">GELUID IN RUIMTE&nbsp;</a>
+                        <a class="navbar-caption text-black" href="index.html">FOREST SOUNDFORM</a>
                     </div>
 
                 </div>
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free responsive web page generator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-i" data-bg-video="https://www.youtube.com/embed/_AK4tCz2PF4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">responsive web page creator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-i" data-bg-video="https://www.youtube.com/embed/_AK4tCz2PF4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);"></div>
 
@@ -289,7 +289,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="vV+2e0U/2GuH+Hr1tUytdafrZuSVIoHyoSpmlDWgAguqAhxo4UW2Xg8AA/Kqbwjbj9YF3HgtwwughzuJyvacppbYxTbiWQO7qCGg4LeDgaBGGQeBLUKDpMja/UGN5Q/4" data-form-email="true">
+                    <input type="hidden" value="1Eifn+EqnX2cFl5AMV5m7wRDWEdIKEmzVLk0lRNqdCU50SHzZpxaU1pZe79XvLgGrCUlXoPwIn3jeuoaNV3xwLIegM45YgdIGcdre1tVuwTIfkp1uoyQVxhs3jctmm/9" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
