--- a/inleiding.html
+++ b/inleiding.html
@@ -50,7 +50,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="index.html">GELUID IN RUIMTE&nbsp;</a>
+                        <a class="navbar-caption text-black" href="index.html">FOREST SOUNDFORM</a>
                     </div>
 
                 </div>
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top bootstrap site design software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1g" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free html web page generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1g" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -298,7 +298,7 @@ het bord dat in vele opticiens hangt om ogen te testen. Er werden ook nieuwe zak
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="FGhoNiWM4sgQastyOB3oSDkMvNChqh5Y6QiROqXYzOUkWKvJkmx74IO0hFGFpCa/w/tRXY8bZ4RvM4JpFM5WxigoWGAGFcrEBhzHDG3oc/rUSql3E/uVPfpFnQ/23/mQ" data-form-email="true">
+                    <input type="hidden" value="egMLRpIDOOxT+CR6lk4UOqggqvp2JLvQ19Fk4yNKehXtr9UCOPhkyfVueaXSLlaipNF9+KcqqrwjTANG575lONpn3NeFrDXquIo7F1bb/p2a3Alx35l5rn5YBC0zURGj" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
