--- a/materialenstudie.html
+++ b/materialenstudie.html
@@ -48,7 +48,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="index.html">GELUID IN RUIMTE&nbsp;</a>
+                        <a class="navbar-caption text-black" href="index.html">FOREST SOUNDFORM</a>
                     </div>
 
                 </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop website generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2h" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop website development software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2h" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -134,7 +134,7 @@ Bovendien heeft de ruimte waarin het prototype geplaatst zou worden ertoe bij ge
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="RwGQj+zLGcEriSkW2cguUa5wQOqL1bB2GvHnhYob/7KJHEczejqfK9wG8qnlJiUHPtPwX88WnrXgOgV0ceOTQcynvspwJERP33l0fKzg0qLvqJuw5yZ7c3eN6jYdrS1c" data-form-email="true">
+                    <input type="hidden" value="Y2/Fv7n9mB2fe65zCHWoQHRRG1S0HTAFNzbeFt4IpijPbJmGExRcjUypZS0jWC8AafyRF9Gd0x8dd7Cywl45YDyp0H2KPVETEeKCpdXkfCyGFwJ9qacyXPhE+hnSUluE" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
