--- a/ontwerpproces.html
+++ b/ontwerpproces.html
@@ -50,7 +50,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="index.html">GELUID IN RUIMTE&nbsp;</a>
+                        <a class="navbar-caption text-black" href="index.html">FOREST SOUNDFORM</a>
                     </div>
 
                 </div>
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">responsive site creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2e" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop web generator software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2e" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -287,7 +287,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="blPqccVSU4/+fX21slc/WATRyxcFf/gZvX2dDPPpbhP/fvuVbe/uquLR60x/h44qFto95BSKiPyUKbvPQqASWx367KmrTT4nOkjWZA1ZauXrsacGL4zWVyqLr8fgmOQU" data-form-email="true">
+                    <input type="hidden" value="xonQet5w0sCpMp1btojn75Tt2im//DzJ6TZO3fUHFi4llEF67kReNZhAC3BT7gFGD1F1fyEgjfEdw+96XDZ5qB5rZWavHpMUGj1Yab8dkdwhljtr4hjB4V2sN60Tpikp" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
