--- a/vormenstudie.html
+++ b/vormenstudie.html
@@ -48,7 +48,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="index.html">GELUID IN RUIMTE&nbsp;</a>
+                        <a class="navbar-caption text-black" href="index.html">FOREST SOUNDFORM</a>
                     </div>
 
                 </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">responsive web generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2f" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap website builder software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2f" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -198,7 +198,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="JHzSffShzgMdCVKHhTentUg90WjTRBvNJLwklPmNzFO9KqMb1uzX6VB7IvjeeRtH5xw5jTQi5iVO5r4j5idgGkd3IeUuW5AFs5Qiz+y+e0SfP2cBhHUELT4OHBzLxWuu" data-form-email="true">
+                    <input type="hidden" value="IzkNNvqIOS9cIOG67sHOWIQjaSRiwh6nBHT8rOAanr/WzZTwvkEONemgvCqki4Xt8ojrsTiZrRIwRVih7FuJgmGNRK33AhQsULclFU1CDwny4SBzQoLVv6zqew8gU1rC" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
