--- a/wiezijnwe.html
+++ b/wiezijnwe.html
@@ -48,7 +48,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="index.html">GELUID IN RUIMTE&nbsp;</a>
+                        <a class="navbar-caption text-black" href="index.html">FOREST SOUNDFORM</a>
                     </div>
 
                 </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best responsive site creator software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2k" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top wysiwyg website design</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2k" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -161,7 +161,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="UNcRMDA0nkJlT5L2GIXY8OBJJ5z2VltZfGaRZVt+BGIbmnCjUYF7FuGVYSpOIvCEROe1rXgCFKttEqQmOUQaHbBbU2Lg84kz8xG9Z+aiQ6XlQ6FEXd6ZIvV1hqvH33o8" data-form-email="true">
+                    <input type="hidden" value="tUCoUXdBjTF/fMVXsX2f8sdBRimjeVXXJOzfiJiM5n5Ig3uYW311cSwlfGRp+GkFvDAhWstt3KXqNr7UOWUQRP7LRvl96UiU15t3h5gE0RYkaO174DOxcEpCdzXLLFKX" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
